--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>WELCOME To</h1>
-    <h1><span id="name">Arshik's</span> Site</h1>
-    <h3>Professional Jr. Web Developer</h3>
+    <section>
+        <div class="half-width">
+            <h1>WELCOME To</h1>
+            <h1><span id="name">Arshik's</span> Site</h1>
+            <h3>Professional Jr. Web Developer</h3>
+            <p>I am a passionate web developer.I know very little but want to know more.Want to be the biggest web developer in the world.</p>
+        </div>
+        <div class="half-width">
+            <img src="images/jhankar.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
