--- a/index.html
+++ b/index.html
@@ -9,16 +9,43 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>WELCOME To</h1>
             <h1><span id="name">Arshik's</span> Site</h1>
-            <h3>Professional Jr. Web Developer</h3>
-            <p>I am a passionate web developer.I know very little but want to know more.Want to be the biggest web developer in the world.</p>
+            <h2>Professional Jr. Web Developer</h2>
+            <p><br><br>I am a passionate web developer.I know very little but want to know more.Want to be the biggest web developer in the worldI am a passionate web developer.I know very little but want to know more.Want to be the biggest web developer in the world..</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/ArshikAkash">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/jhankar.png" alt="">
         </div>
     </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>MY DREAMS</h2>
+            <p>I am a passionate web developer.I know very little but want to know more.Want to be the biggest web developer in the world.I am a passionate web developer.I know very little but want to know more.Want to be the biggest web developer in the world.</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/ArshikAkash">Download Portfolio</a>
+        </div>
+    </section>
+    <section class="exp-area">
+        <pre>  Experiences</pre>
+        <div id="half-stack" class="half-width single-exp">
+            <h2>Full Stack Web Developer</h2>
+            <h3>2021-Present Time || Professional Stack Developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+        </div>
+        <div id="full-stack" class="half-width single-exp">
+            <h2>Junior Web Developer</h2>
+            <h3>2020-2021 || Programming Hero Learner</h3>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+        </div>
+    </section>
 </body>
+<footer>
+    © Arshik Hossen 2021, all rigts reserved | a Programming Hero initiative.
+</footer>
 </html>
