--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <section class="top-banner">
         <div class="half-width">
-            <h1>WELCOME To</h1>
+            <h1>WELCOME TO</h1>
             <h1><span id="name">Arshik's</span> Site</h1>
             <h2>Professional Jr. Web Developer</h2>
             <p><br><br>I am a passionate web developer.I know very little but want to know more.Want to be the biggest web developer in the worldI am a passionate web developer.I know very little but want to know more.Want to be the biggest web developer in the world..</p>
