--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             <a class="link-button" target="_blank" href="https://www.facebook.com/ArshikAkash">HIRE ME</a>
         </div>
         <div class="half-width">
-            <img src="images/jhankar.png" alt="">
+            <img src="images/akash1.png" alt="">
         </div>
     </section>
     <section class="dream-area">
         <div class="half-width">
-            <img src="images/jhankar2.png" alt="">
+            <img src="images/akash2.png" alt="">
         </div>
         <div class="half-width">
             <h2>MY DREAMS</h2>
